--- a/src/main/resources/templates/employee/createEmployeeForm.html
+++ b/src/main/resources/templates/employee/createEmployeeForm.html
@@ -31,7 +31,7 @@
                 <input type="text" class="form-control" th:field="*{email}" placeholder="test@email.com">
             </div>
             <div class="text-end">
-                <a th:href="@{/list}" class="btn btn-dark me-3">리스트</a>
+                <a th:href="@{/employee/list}" class="btn btn-dark me-3">리스트</a>
                 <button type="submit" class="btn btn-refoam">등록</button>
             </div>
         </form>
