--- a/src/main/resources/templates/order/orderList.html
+++ b/src/main/resources/templates/order/orderList.html
@@ -27,7 +27,7 @@
 <!--                        <button class="btn btn-sm btn-refoam" type="submit" th:disabled="${order.processList[0].status != null}">배합공정</button>-->
 <!--                    </form>-->
                     <a href="#" th:href="@{/process/{id}/list(id=${order.id})}" class="btn btn-refoam btn-sm" role="button">공정결과</a>
-                    <button class="btn btn-sm btn-dark">주문취소</button>
+                    <a href="#" th:href="@{/order/{id}/delete(id=${order.id})}" class="btn btn-sm btn-dark" th:disabled="${order.orderState == '배합완료'}">주문취소</a>
                 </td>
             </tr>
             </tbody>
@@ -65,7 +65,7 @@
 <!--                            <button class="btn btn-sm btn-refoam" type="submit" th:disabled="${order.processList[0].status != null}">배합공정</button>-->
 <!--                        </form>-->
                         <a href="#" th:href="@{/process/{id}/list(id=${order.id})}" class="btn btn-refoam btn-sm" role="button">공정결과</a>
-                        <button class="btn btn-sm btn-dark">주문취소</button>
+                        <a href="#" th:href="@{/order/{id}/delete(id=${order.id})}" class="btn btn-sm btn-dark" th:disabled="${order.orderState == '배합완료'}">주문취소</a>
                     </td>
                 </tr>
             </th:block>
